# face_detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  environment.yml  pyproject.toml
notebooks/: embeddings.ipynb
src/: main.py  milvus_manager.py  model.py  mpipe.py  settings_template.json  support.py  test.py  visualization.py
src/pickles/: embeddings_faces.pickle  mapper_faces.pickle  mapper_faces_storage.pickle  normalizer.pickle
