[tool.poetry]
name = "face_detection"
version = "0.1.0"
description = "Face detection demo based on facenet and streamlit"
authors = ["gordeev.al <aleksandr_gordeev2@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud = "0.34.0"
streamlit = "1.8.1"
dynaconf = "3.1.7"
pymilvus = "2.0.0rc8"
pre-commit = "^2.18.1"
black = "^22.3.0"
mediapipe = "^0.8.9"
facenet-pytorch = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
